# library-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: doc_test.yml  fail.yml  gen_doc.yml  gen_mirror.yml  lib_test.yml  neko.yml  nya.yml  pr_doc_test.yml  prep_testcase.yml  test_doc.yml  testcases.yml  unit_test.yml  verify.yml
.trigger/: doc_test  gen_doc
bundler/: Cargo.toml
bundler/src/: bundle.rs  lib.rs  main.rs  polish.rs
crates/algebra/: Cargo.toml
crates/algebra/src/: lib.rs
crates/algo/bisect/: Cargo.toml
crates/algo/bisect_/: Cargo.toml
crates/algo/exact_cover/: Cargo.toml
crates/algo/extremum/: Cargo.toml
crates/algo/extremum_float/: Cargo.toml
crates/algo/hilbert_mo_/: Cargo.toml
crates/algo/index_order/: Cargo.toml
crates/algo/inversion/: Cargo.toml
crates/algo/inversion/src/: lib.rs
crates/algo/karatsuba/: Cargo.toml
crates/algo/larsch/: Cargo.toml
crates/algo/majority_/: Cargo.toml
crates/algo/minmax/: Cargo.toml
crates/algo/mo/: Cargo.toml
crates/algo/ordered_hash_/: Cargo.toml
crates/algo/parallel_bisect/: Cargo.toml
crates/algo/partition_point/: Cargo.toml
crates/algo/permutation/: Cargo.toml
crates/algo/tortoise_hare/: Cargo.toml
crates/algo/window_bisect/: Cargo.toml
crates/ds/: Cargo.toml
crates/ds/bicremental_median/: Cargo.toml
crates/ds/bicremental_median_dev/: Cargo.toml
crates/ds/binary_trie/: Cargo.toml
crates/ds/bit_set/: Cargo.toml
crates/ds/btree_bimap/: Cargo.toml
crates/ds/btree_multiset/: Cargo.toml
crates/ds/cuckoo_hash_map/: Cargo.toml
crates/ds/cuckoo_hash_set/: Cargo.toml
crates/ds/decremental_usize_set/: Cargo.toml
crates/ds/disjoint_sparse_table/: Cargo.toml
crates/ds/disjoint_sparse_table/src/: lib.rs
crates/ds/foldable_deque/: Cargo.toml
crates/ds/foldable_queue/: Cargo.toml
crates/ds/foldable_queue/src/: lib.rs
crates/ds/incremental_line_set/: Cargo.toml
crates/ds/interval_map/: Cargo.toml
crates/ds/interval_map_2/: Cargo.toml
crates/ds/interval_set/: Cargo.toml
crates/ds/n1_rmq/: Cargo.toml
crates/ds/potentialized_union_find/: Cargo.toml
crates/ds/range_tree/: Cargo.toml
crates/ds/removable_heap/: Cargo.toml
crates/ds/rs_dict/: Cargo.toml
crates/ds/skew_heap/: Cargo.toml
crates/ds/union_find/: Cargo.toml
crates/ds/vec_act_segtree/: Cargo.toml
crates/ds/vec_act_segtree/src/: lib.rs  main.rs
crates/ds/vec_segtree/: Cargo.toml
crates/ds/vec_segtree/src/: lib.rs
crates/ds/wavelet_matrix/: Cargo.toml
crates/ds/wavelet_matrix/src/: lib.rs
crates/graph/adjlist/: Cargo.toml
crates/graph/dijkstra/: Cargo.toml
crates/graph/dijkstra_/: Cargo.toml
crates/graph/dinic_/: Cargo.toml
crates/graph/functional_graph/: Cargo.toml
crates/graph/hld/: Cargo.toml
crates/graph/scc/: Cargo.toml
crates/graph/scc_/: Cargo.toml
crates/graph/sssp/: Cargo.toml
crates/math/dlog_/: Cargo.toml
crates/math/dlog_/src/: lib.rs
crates/math/mod_ackermann/: Cargo.toml
crates/math/mod_ackermann/src/: lib.rs
crates/math/mod_ackermann_/: Cargo.toml
crates/math/mod_ackermann_/src/: lib.rs
crates/math/modint/: Cargo.toml
crates/math/modint/src/: lib.rs
crates/math/ord_/: Cargo.toml
crates/math/ord_/src/: lib.rs
crates/utils/op_add_on_op_add_count/: Cargo.toml
crates/utils/op_add_on_op_add_count/src/: lib.rs
crates/utils/op_add_on_op_max/: Cargo.toml
crates/utils/op_add_on_op_max/src/: lib.rs
crates/utils/op_add_on_op_min/: Cargo.toml
crates/utils/op_add_on_op_min/src/: lib.rs
crates/utils/op_affine/: Cargo.toml
crates/utils/op_affine/src/: lib.rs
crates/utils/op_affine_on_op_add_count/: Cargo.toml
crates/utils/op_affine_on_op_add_count/src/: lib.rs
crates/utils/op_mul/: Cargo.toml
crates/utils/op_mul/src/: lib.rs
notes/: Cargo.toml
notes/src/: lib.rs
script/: Cargo.toml
script/src/: main.rs
static/: ferris-in-doc.html  katex-header.html  lato-header.html  neko-test.html
static/.cargo/: config.toml
static/nekolib/: ferris-in-doc.html  lato-header.html
static/nekolib-notes/: Cargo.toml  debug.md
static/nekolib-verify/: Cargo.toml
static/src/: lib.rs  traits.rs
trigger/: doc_test  gen_doc
verifiers/: Cargo.toml  testcases.toml
verifiers/download/: Cargo.toml
verifiers/download/src/: lib.rs  main.rs
verifiers/src/: download.rs  judge.rs  jury.rs  lib.rs  main.rs  solver.rs  test_set.rs  testcase.rs
verifiers/src-bak/: judge.rs  solver.rs  testcase.rs
verifiers/src-bak/solver/: yukicoder.rs
verifiers/src-bak/solver/aoj/: aoj_0270.rs  aoj_dsl_2_b.rs
verifiers/src/jury/: aoj_0000.rs  aoj_0002.rs  aoj_0270.rs  aoj_0425.rs  aoj_0564.rs  aoj_1180.rs  aoj_dsl_1_a.rs  aoj_dsl_2_b.rs  template.rs  yuki_3287.rs
verifiers/src/solver/: aoj.rs  aoj_0000.rs  aoj_0000_re.rs  aoj_0000_tle.rs  aoj_0000_wa.rs  aoj_0002.rs  aoj_0270.rs  aoj_0425.rs  aoj_0564.rs  aoj_1180.rs  aoj_dsl_1_a.rs  aoj_dsl_2_b.rs  template.rs  yuki_3287.rs
verifiers/src/solver/aoj/: aoj_0000.rs  aoj_0002.rs  aoj_0270.rs  aoj_0564.rs  aoj_1180.rs
verifiers/src/solver/yukicoder/: yuki_3287.rs
verifiers/tests/: test_judge.rs  verify.rs
verifiers/tests-bak/: verify.rs
verifiers/verify/: Cargo.toml
verifiers/verify/src/: jury.rs  lib.rs  solver.rs  test_set.rs
verifiers/verify/src/jury/: aoj_0000.rs  aoj_0002.rs  aoj_0270.rs  aoj_0425.rs  aoj_0564.rs  aoj_0575.rs  aoj_1180.rs  aoj_2880.rs  aoj_alds1_14_b.rs  aoj_alds1_14_d.rs  aoj_dsl_1_a.rs  aoj_dsl_1_b.rs  aoj_dsl_2_b.rs  aoj_dsl_2_d.rs  aoj_grl_1_a.rs  aoj_grl_3_c.rs  aoj_grl_6_a.rs  yuki_1601.rs  yuki_3287.rs
verifiers/verify/src/solver/: aoj_0000_tle.rs  aoj_0000_wa.rs  aoj_0270.rs  aoj_0425.rs  aoj_0564.rs  aoj_0575.rs  aoj_1180.rs  aoj_2880.rs  aoj_alds1_14_b.rs  aoj_alds1_14_b_kmp.rs  aoj_alds1_14_b_z.rs  aoj_alds1_14_d.rs  aoj_dsl_1_a.rs  aoj_dsl_1_b.rs  aoj_dsl_2_b.rs  aoj_dsl_2_d_iset.rs  aoj_grl_1_a.rs  aoj_grl_3_c.rs  aoj_grl_6_a.rs  template.rs  yuki_1601.rs  yuki_3287.rs
verifiers/verify/tests/: test_judge.rs  verify.rs  verify_interval_set.rs  verify_suffix_array.rs  verify_vec_segtree.rs
(+275 files in other folders)
