[package]
name = "verifiers"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
tokio = { version = "0.2.22", features = ["macros", "time"] }
toml = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
fold = { path = "../crates/traits/fold" }
set_value = { path = "../crates/traits/set_value" }
op_add = { path = "../crates/utils/op_add" }
partition_point = { path = "../crates/algo/partition_point" }
tortoise_hare = { path = "../crates/algo/tortoise_hare" }

[dev-dependencies]
vec_segtree = { path = "../crates/ds/vec_segtree" }

[lib]
name = "verifiers"
path = "src/lib.rs"

[[bin]]
name = "download"
path = "src/main.rs"
