[package]
name = "verify"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
scanner = { path = "../../crates/utils/scanner" }
fold = { path = "../../crates/traits/fold" }
fold_bisect = { path = "../../crates/traits/fold_bisect" }
set_value = { path = "../../crates/traits/set_value" }
op_add = { path = "../../crates/utils/op_add" }
op_max = { path = "../../crates/utils/op_max" }
op_min = { path = "../../crates/utils/op_min" }
bisect_ = { path = "../../crates/algo/bisect_" }
tortoise_hare = { path = "../../crates/algo/tortoise_hare" }
additive = { path = "../../crates/traits/additive" }
union-find = { path = "../../crates/ds/union_find" }
disjoint-set = { path = "../../crates/traits/disjoint-set" }
elastic_slice = { path = "../../crates/traits/elastic_slice" }
mo = { path = "../../crates/algo/mo" }
dijkstra_ = { path = "../../crates/graph/dijkstra_" }
parallel_bisect = { path = "../../crates/algo/parallel_bisect" }
stateful_predicate = { path = "../../crates/traits/stateful_predicate" }
scc_ = { path = "../../crates/graph/scc_" }
suffix_array = { path = "../../crates/seq/suffix_array" }
# pat_searcher = { path = "../../crates/traits/pat_searcher" }
z_algo = { path = "../../crates/seq/z_algo" }
kmp = { path = "../../crates/seq/kmp" }
potential_function = { path = "../../crates/traits/potential_function" }
interval_set = { path = "../../crates/ds/interval_set" }
dinic_ = { path = "../../crates/graph/dinic_" }

[dev-dependencies]
vec_segtree = { path = "../../crates/ds/vec_segtree" }
union-find = { path = "../../crates/ds/union_find" }
potentialized_union_find = { path = "../../crates/ds/potentialized_union_find" }
