[package]
name = "vec_segtree"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binop = { path = "../../traits/binop" }
fold = { path = "../../traits/fold" }
fold_bisect = { path = "../../traits/fold_bisect" }
set_value = { path = "../../traits/set_value" }
buf_range = { path = "../../utils/buf_range" }
get_mut = { path = "../../traits/get_mut" }

[dev-dependencies]
op_add = { path = "../../utils/op_add" }
