[package]
name = "wavelet_matrix"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_dict = { path = "../rs_dict" }
count = { path = "../../traits/count" }
find_nth = { path = "../../traits/find_nth" }
buf_range = { path = "../../utils/buf_range" }
nth_min = { path = "../../traits/nth_min" }
