[package]
name = "dlog_"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd_recip_ = { path = "../gcd_recip_" }
mod_pow_ = { path = "../mod_pow_" }
totient_phi_ = { path = "../totient_phi_" }
factors_ = { path = "../factors_" }
divisors_ = { path = "../divisors_" }
