[package]
name = "dlog_"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd_recip_ = { path = "../gcd_recip_" }
mod_pow_ = { path = "../mod_pow_" }
# euler_phi_ = { path = "../euler_phi_" }
carmichael_lambda_ = { path = "../carmichael_lambda_" }
factors_ = { path = "../factors_" }
divisors_ = { path = "../divisors_" }
const_div = { path = "../const_div" }
