[package]
name = "ord_"
version = "0.1.0"
authors = ["rsk0315 <rsk0315@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mod_pow_ = { path = "../mod_pow_" }
euler_phi_ = { path = "../euler_phi_" }
factors_ = { path = "../factors_" }