[package]
name = "op_add_on_op_add_count"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
action = { path = "../../traits/action" }
additive = { path = "../../traits/additive" }
op_add = { path = "../op_add" }
op_add_count = { path = "../op_add_count" }
