[package]
name = "op_add_on_op_max"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
op_add = { path = "../op_add" }
op_max = { path = "../op_max" }
additive = { path = "../../traits/additive" }
binop = { path = "../../traits/binop" }
min = { path = "../../traits/min" }
action = { path = "../../traits/action" }
