[package]
name = "op_add_on_op_min"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
op_add = { path = "../op_add" }
op_min = { path = "../op_min" }
additive = { path = "../../traits/additive" }
binop = { path = "../../traits/binop" }
max = { path = "../../traits/max" }
action = { path = "../../traits/action" }
